--- a/.github/workflows/pkg_release.yaml
+++ b/.github/workflows/pkg_release.yaml
@@ -16,4 +16,4 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r /django_cityloc_pkg_arunkumar09/requirements.txt
